--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,15 @@ name = "iris"
 path = "./src/bin/main.rs"
 
 [dependencies]
-esp-hal = { version = "1.0.0", features = ["esp32s3"] }
+esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable"] }
 
 
 esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
 
 esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
 esp32s3 = "0.34.0"
+embedded-sdmmc = "0.9.0"
+embedded-hal-bus = "0.3.0"
 
 
 [profile.dev]
