--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
 esp32s3 = "0.34.0"
 embedded-sdmmc = "0.9.0"
 embedded-hal-bus = "0.3.0"
+embedded-graphics = "0.8.1"
+display-interface-spi = "0.5.0"
+mipidsi = "0.9.0"
 
 
 [profile.dev]
