--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ embedded-hal-bus = "0.3.0"
 embedded-graphics = "0.8.1"
 display-interface-spi = "0.5.0"
 mipidsi = "0.9.0"
+tinybmp = "0.6.0"
 
 
 [profile.dev]
