--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ embedded-graphics = "0.8.1"
 display-interface-spi = "0.5.0"
 mipidsi = "0.9.0"
 tinybmp = "0.6.0"
+zssh = "0.4.2"
 
 
 [profile.dev]
