--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version      = "0.1.0"
 [[bin]]
 name = "iris"
 path = "./src/bin/main.rs"
+test = false
 
 [dependencies]
 esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable"] }
